--- a/resources/css/ceres-checkout.scss
+++ b/resources/css/ceres-checkout.scss
@@ -12159,6 +12159,7 @@ body {
             -ms-flex-preferred-size: 55%;
                 flex-basis: 55%;
             max-width: 55%;
+            max-height: 45vh;
         }
 
         .totals {
