--- a/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview.scss
+++ b/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview.scss
@@ -118,6 +118,7 @@
         .item-list {
             flex-basis: 55%;
             max-width: 55%;
+            max-height: 45vh;
         }
 
         .totals {
